Update Logistics page

--- a/logistics.html
+++ b/logistics.html
@@ -487,15 +487,15 @@
                       <input type="text" class="form-control"  name="Name" placeholder="Name"  />
                     </div>
                     <div class="col-md-6 margin-bottom">
-                      <input type="email" class="form-control "  name="phone" placeholder="email"  />
+                      <input type="email" class="form-control "  name="phone" placeholder="Email"  />
                     </div>
                   
                   
                     <div class="col-md-6 margin-bottom ">
-                      <input type="text" class="form-control"  name="email" placeholder="phone"/>
+                      <input type="text" class="form-control"  name="email" placeholder="Phone Number"/>
                     </div>
                     <div class=" col-md-6 margin-bottom">
-                      <input type="text" class="form-control"  name="Pick-up-address" placeholder="pick-up-address"/>
+                      <input type="text" class="form-control"  name="Pick-up-address" placeholder="Pick-up-address"/>
                     </div>
                     <div class="col-md-6 margin-bottom ">
                       <input type="text" class="form-control"  name="Delivery-address" placeholder="Delivery Address"/>
